[tool.poetry]
name = "apikey-hub"
version = "0.1.0"
description = "A simple API key manager for developers and their projects."
authors = ["flavien-hugs <flavienhugs@pm.me>"]
packages = [{include = "src" }]

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = {version = "0.115.0", extras = ["standard"]}
uvloop = "0.20.0"
beanie = "1.26.0"
python-slugify = "8.0.4"
pydantic-settings = "2.5.2"
fastapi-pagination = "0.12.27"
cachetools = "5.5.0"
typer = "^0.15.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
bandit = "^1.8.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
pre-commit = "^4.0.1"
poetry-dynamic-versioning = "^1.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
faker = "^33.1.0"
mongomock-motor = "^0.0.34"
pytest-asyncio = "^0.25.1"
pytest-mock = "^3.14.0"
coverage = "^7.6.10"
pytest-dotenv = "^0.5.2"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = 'src.run:app'

[tool.poetry-dynamic-versioning]
version-file = "src/__init__.py"
tag = true
enable = true
vcs = "git"
commit = true

[tool.flake8]
max-line-length = 130
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".pytest_cache",
    ".tox",
    ".eggs"
]

[tool.black]
line-length = 130
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.docker
    | \*.egg-info
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
env_files = "tests/.test.env"
env_override_existing_values = 1
capture = "no"
log-cli-level = "INFO"
python_files = "test_*.py"
asyncio_mode = "auto"
filterwarnings = [
  "ignore",
  "ignore:.*U.*mode is deprecated:DeprecationWarning"
]
